<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tic_tac_toe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sherry.games.TicTacToe">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:rowCount="3"
        android:columnCount="3">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button1"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button2"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button3"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button4"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button5"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button6"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button7"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button8"
            android:onClick="makeMove"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/empty"
            android:textSize="50sp"
            android:id="@+id/button9"
            android:onClick="makeMove"/>
    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/status"
        android:id="@+id/status">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/empty"
        android:id="@+id/results">
    </TextView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/newgame"
            android:id="@+id/restartbutton"
            android:onClick="restartGame"/>
    </RelativeLayout>

</LinearLayout>

